<resources>
    <string name="app_name">ToknResumeBuilder</string>
    <string name="view_resume">View Resume</string>
    <string name="name">Name</string>
    <string name="job_title">Job title (optional)</string>
    <string name="phone_number">Phone Number</string>
    <string name="linkedin_url">LinkedIn URL (optional)</string>
    <string name="home_address_optional">Home Address (Optional)</string>
    <string name="email">Email id</string>
    <string name="profile_pic">Profile_Pic</string>
    <string name="add">Add</string>
    <string name="education_1">Education</string>
    <string name="personal_details">Personal Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum_dolor_sit">Lorem ipsum dolor sit</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing">Lorem ipsum dolor sit amet, consectetur adipiscing</string>
    <string name="experience_1">Experience 1</string>
    <string name="profile">Profile</string>
    <string name="organization">Organization</string>
    <string name="grade_score">Grade/Score</string>
    <string name="start_year">Start Year</string>
    <string name="end_year">End Year</string>
    <string name="work_from_home">Work from home</string>
    <string name="location">Location</string>
    <string name="job_description">Job Description</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="use_our_free_templates_to_build_your_resume">Use our free templates to build your resume</string>
    <string name="pick_a_resume_template">Pick a resume template!</string>
    <string name="add_another_section">Add another section</string>
    <string name="save_amp_proceed"><![CDATA[Save & proceed]]></string>
    <string name="save_amp_n_proceed"><![CDATA[Save &\n proceed]]></string>
    <string name="previous">Previous</string>
    <string name="name_of_the_company">Name of the company</string>
    <string name="description_of_the_company_optional">Description of the company(optional)</string>
    <string name="onboarding_picture">OnBoarding picture</string>
    <string name="skills">Skills</string>
    <string name="options">options</string>
    <string name="save">Save</string>
    <string name="text">text</string>
    <string name="change_font">Change font</string>
    <string name="change_colour">Change colour</string>
    <string name="change_template">Change Template</string>
    <string name="sync_with_google_drive_other_drives">Sync with google drive /other drives</string>
    <string name="feedback">Feedback</string>
    <string name="share_app">Share app</string>
    <string name="rate_app">Rate app</string>
    <string name="trending_topics">Trending topics</string>
    <string name="resume_preview">Resume preview</string>
    <string name="my_resume_1">My Resume 1</string>
    <string name="edit_resume">Edit resume</string>
    <string name="download_resume">Download Resume</string>
    <string name="share_resume">Share resume</string>
    <string name="preview_resume">Preview resume</string>
    <string name="add_a_new_resume">Add a new resume</string>
    <string name="add_a_new_cover_letter">Add a new cover letter</string>
    <string name="other_templates">Other templates</string>
    <string name="skill">Skill</string>
    <string name="remove">Remove</string>
    <string name="rearrange">Rearrange</string>
    <string name="section">Section</string>
    <string name="objective">Objective</string>
    <string name="project">Project</string>
    <string name="project_link_optional">Project Link (optional)</string>
    <string name="description">Description</string>
    <string name="school_university">School/ University</string>
    <string name="course">Course</string>
    <string name="duration">Duration</string>
    <string name="key_achievements">* Key achievements</string>
    <string name="add_another_designation">Add another designation</string>
    <string name="project_title">Project Title</string>


    <array name="re_arrange_sections">
        <item>Personal Details</item>
        <item>Education</item>
        <item>Professional Details</item>
        <item>Skills</item>
        <item>Objective</item>
        <item>Project</item>
    </array>

    <array name="re_arrange_drawable">
        <item>R.drawable.person</item>
        <item>R.drawable.education</item>
    </array>

    <array name="onboarding_text">
        <item>Pick a resume template!</item>
        <item>Customize to your liking!</item>
        <item>Share easily to get the job!</item>
    </array>

    <array name="onboarding_subtext">
        <item>Use our free templates to build your resume</item>
        <item>Add sections, modify the order and save the progress</item>
        <item>Build the best version of your resume and apply</item>
    </array>

    <array name="rating">
        <item>Rate your skills</item>
        <item>No rating</item>
        <item>Stars</item>
        <item>Progress bar</item>
    </array>

</resources>